z-index nav , calc fixato

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,7 @@
         top: 0;
         background-color: white;
         font-weight: bold;
+        z-index: 1;
      }
 
      header {
@@ -105,7 +106,7 @@
      }
 
      .tab2 {
-        width: calc(100%3);
+        width: calc(100%/3);
         border: 1px solid lightgray;
         padding-bottom: 10%;
      }
